fix: implove loaded files visibility

--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ img {
   text-align: center;
   align-content: center;
   box-sizing: border-box;
+  line-height: 2em;
 }
 
 #drop-zone.dragging {
@@ -57,7 +58,6 @@ img {
 #control-panel.show {
   display: flex;
   width: 100%;
-  justify-content: space-between;
   margin-bottom: 0.5em;
   padding: 0 0.5em 0.5em 0.5em;
   border-bottom: 1px solid #ccc;
@@ -68,4 +68,20 @@ img {
   flex-direction: column;
   align-items: center;
   gap: 0.5em;
+}
+
+.container {
+  flex: 1;
+}
+
+.left {
+  text-align: left;
+}
+
+.center {
+  text-align: center;
+}
+
+.right {
+  text-align: right;
 }
